--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="white1">#FDD7D7</color>
+    <color name="pink">#FFEC808D</color>
+    <color name="blue">#FF79D2FC</color>
+    <color name="greennormal">#8BC34A</color>
+    <color name="blank">#00000000</color>
 </resources>
