--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="white1">#FDD7D7</color>
     <color name="pink">#FFEC808D</color>
-    <color name="blue">#FF79D2FC</color>
+    <color name="blue">#77D3FD</color>
     <color name="greennormal">#8BC34A</color>
     <color name="blank">#00000000</color>
 </resources>
