--- a/app/src/main/res/layout/activity_singletalk.xml
+++ b/app/src/main/res/layout/activity_singletalk.xml
@@ -6,7 +6,7 @@
     android:background="@mipmap/all_background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/activity_singleTalk_stateLayout"
+        android:id="@+id/activity_photo_stateLayout"
         android:layout_width="0dp"
         android:layout_height="68dp"
         android:background="#05555555"
@@ -69,25 +69,25 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/activity_singleTalk_talkLayout"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/activity_singleTalk_recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#3DD7D7D7"
         app:layout_constraintBottom_toTopOf="@+id/activity_singleTalk_functionLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_singleTalk_stateLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/activity_photo_stateLayout" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/activity_singleTalk_functionLayout"
         android:layout_width="0dp"
         android:layout_height="104dp"
         android:background="#21C280FF"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/activity_singleTalk_recordLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/activity_singleTalk_talkLayout">
+        app:layout_constraintTop_toBottomOf="@+id/activity_singleTalk_recyclerView">
 
         <EditText
             android:id="@+id/activity_singleTalk_inputEt"
@@ -98,6 +98,7 @@
             android:background="@drawable/activity_regist_signbtn_selector"
             android:hint="@string/pleaseInput"
             android:paddingStart="15dp"
+            android:paddingEnd="15dp"
             android:textSize="6pt"
             app:cornerRadius="50dp"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -109,7 +110,7 @@
             android:layout_height="32dp"
             android:layout_marginEnd="35dp"
             android:background="@drawable/activity_singletalk_sendbtn_selector"
-            android:text="@string/login"
+            android:text="@string/send"
             android:textColor="@color/white"
             android:textSize="6pt"
             app:cornerRadius="50dp"
@@ -119,9 +120,9 @@
 
         <Button
             android:id="@+id/activity_singleTalk_makePhotoBtn"
-            android:layout_width="68px"
-            android:layout_height="50px"
-            android:layout_marginLeft="210px"
+            android:layout_width="25dp"
+            android:layout_height="19dp"
+            android:layout_marginStart="80dp"
             android:background="@drawable/ic_makephoto"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
@@ -132,8 +133,8 @@
 
         <Button
             android:id="@+id/activity_singleTalk_photoBtn"
-            android:layout_width="68px"
-            android:layout_height="50px"
+            android:layout_width="25dp"
+            android:layout_height="19dp"
             android:background="@drawable/ic_photo"
             app:layout_constraintBottom_toBottomOf="@+id/activity_singleTalk_makePhotoBtn"
             app:layout_constraintLeft_toRightOf="@+id/activity_singleTalk_makePhotoBtn"
@@ -142,14 +143,209 @@
 
         <Button
             android:id="@+id/activity_singleTalk_recordBtn"
-            android:layout_width="68px"
-            android:layout_height="50px"
-            android:layout_marginRight="210px"
+            android:layout_width="25dp"
+            android:layout_height="19dp"
+            android:layout_marginEnd="80dp"
             android:background="@drawable/ic_record"
             app:layout_constraintBottom_toBottomOf="@+id/activity_singleTalk_makePhotoBtn"
             app:layout_constraintLeft_toRightOf="@+id/activity_singleTalk_photoBtn"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="@+id/activity_singleTalk_makePhotoBtn" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/activity_singleTalk_recordLayout"
+        android:layout_width="0dp"
+        android:layout_height="218dp"
+        android:background="#21C280FF"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/activity_singleTalk_functionLayout">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/activity_singleTalk_recordStartLayout"
+            android:layout_width="0dp"
+            android:layout_height="218dp"
+            android:background="#21C280FF"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <Button
+                android:id="@+id/activity_singleTalk_record_startBtn"
+                android:layout_width="91dp"
+                android:layout_height="91dp"
+                android:background="@drawable/ic_recordstart1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.7" />
+
+            <TextView
+                android:layout_width="41dp"
+                android:layout_height="33dp"
+                android:background="@drawable/ic_recordstart2"
+                app:layout_constraintBottom_toBottomOf="@+id/activity_singleTalk_record_startBtn"
+                app:layout_constraintEnd_toEndOf="@+id/activity_singleTalk_record_startBtn"
+                app:layout_constraintStart_toStartOf="@+id/activity_singleTalk_record_startBtn"
+                app:layout_constraintTop_toTopOf="@+id/activity_singleTalk_record_startBtn" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="44dp"
+                android:gravity="center"
+                android:text="@string/clickStartRecord"
+                android:textColor="@color/white"
+                android:textSize="8pt"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/activity_singleTalk_recordStopLayout"
+            android:layout_width="0dp"
+            android:layout_height="218dp"
+            android:background="#21C280FF"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <Button
+                android:id="@+id/activity_singleTalk_record_stopBtn"
+                android:layout_width="91dp"
+                android:layout_height="91dp"
+                android:background="@drawable/ic_recordstop"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.7" />
+
+            <TextView
+                android:id="@+id/activity_singleTalk_record_stopTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="44dp"
+                android:gravity="center"
+                android:text="@string/time00_00_01"
+                android:textColor="@color/white"
+                android:textSize="8pt"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/activity_singleTalk_recordPreviewLayout"
+            android:layout_width="0dp"
+            android:layout_height="218dp"
+            android:background="#21C280FF"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <Button
+                android:id="@+id/activity_singleTalk_record_previewBtn"
+                android:layout_width="91dp"
+                android:layout_height="91dp"
+                android:background="@drawable/ic_recordplay1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.606" />
+
+            <TextView
+                android:id="@+id/activity_singleTalk_record_previewBtnIc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:background="@drawable/ic_recordplay2"
+                app:layout_constraintBottom_toBottomOf="@+id/activity_singleTalk_record_previewBtn"
+                app:layout_constraintEnd_toEndOf="@+id/activity_singleTalk_record_previewBtn"
+                app:layout_constraintStart_toStartOf="@+id/activity_singleTalk_record_previewBtn"
+                app:layout_constraintTop_toTopOf="@+id/activity_singleTalk_record_previewBtn" />
+
+            <TextView
+                android:id="@+id/activity_singleTalk_record_previewBtnTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/play"
+                android:textColor="@color/white"
+                android:textSize="6pt"
+                app:layout_constraintEnd_toEndOf="@+id/activity_singleTalk_record_previewBtn"
+                app:layout_constraintStart_toStartOf="@+id/activity_singleTalk_record_previewBtn"
+                app:layout_constraintTop_toBottomOf="@+id/activity_singleTalk_record_previewBtn" />
+
+            <Button
+                android:id="@+id/activity_singleTalk_record_sendBtn"
+                android:layout_width="32dp"
+                android:layout_height="36dp"
+                android:background="@drawable/ic_recordsend"
+                app:layout_constraintBottom_toBottomOf="@+id/activity_singleTalk_record_previewBtn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.8"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/send"
+                android:textColor="@color/white"
+                android:textSize="6pt"
+                app:layout_constraintEnd_toEndOf="@+id/activity_singleTalk_record_sendBtn"
+                app:layout_constraintStart_toStartOf="@+id/activity_singleTalk_record_sendBtn"
+                app:layout_constraintTop_toBottomOf="@+id/activity_singleTalk_record_sendBtn" />
+
+            <Button
+                android:id="@+id/activity_singleTalk_record_rerecordBtn"
+                android:layout_width="32dp"
+                android:layout_height="39dp"
+                android:layout_marginTop="3dp"
+                android:background="@drawable/ic_rerecord"
+                app:layout_constraintBottom_toBottomOf="@+id/activity_singleTalk_record_previewBtn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.2"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="@string/rerecord"
+                android:textColor="@color/white"
+                android:textSize="6pt"
+                app:layout_constraintEnd_toEndOf="@+id/activity_singleTalk_record_rerecordBtn"
+                app:layout_constraintStart_toStartOf="@+id/activity_singleTalk_record_rerecordBtn"
+                app:layout_constraintTop_toBottomOf="@+id/activity_singleTalk_record_rerecordBtn" />
+
+
+            <TextView
+                android:id="@+id/activity_singleTalk_record_previewTimeTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="36dp"
+                android:gravity="center"
+                android:text="@string/time000001000013"
+                android:textColor="@color/white"
+                android:textSize="8pt"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
