--- a/app/src/main/res/anim/bottom_to_top.xml
+++ b/app/src/main/res/anim/bottom_to_top.xml
@@ -2,6 +2,6 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android">
     <translate
         android:duration="500"
-        android:fromYDelta="0.0"
+        android:fromYDelta="0.0%p"
         android:toYDelta="100.0%p" />
 </set>
