--- a/app/src/main/res/anim/top_to_bottom.xml
+++ b/app/src/main/res/anim/top_to_bottom.xml
@@ -3,5 +3,5 @@
     <translate
         android:duration="500"
         android:fromYDelta="100.0%p"
-        android:toYDelta="0.0" />
+        android:toYDelta="0.0%p" />
 </set>
