--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -78,6 +78,16 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="33dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="472dp"
+        android:text="@string/birth"
+        android:textSize="8pt"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.banmo.sweethomeclient.customview.CircleImageView
         android:id="@+id/fragment_mine_headImg"
         android:layout_width="106dp"
@@ -95,11 +105,11 @@
         android:layout_marginTop="160dp"
         android:layout_marginEnd="48dp"
         android:background="#6680FFFF"
+        android:focusable="false"
         android:gravity="center"
         android:text="@string/username"
         android:textColor="@color/black"
         android:textSize="8pt"
-        android:focusable="false"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -113,7 +123,7 @@
         android:gravity="center"
         android:text="@string/createtime"
         android:textColor="@color/black"
-        android:textSize="6pt"
+        android:textSize="8pt"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -132,21 +142,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Spinner
-        android:prompt="@string/sexy"
-        android:entries="@array/sexy"
         android:id="@+id/fragment_mine_sexySp"
         android:layout_width="190dp"
         android:layout_height="33dp"
         android:layout_marginTop="316dp"
         android:layout_marginEnd="48dp"
-        android:textAlignment="center"
         android:background="#6680FFFF"
+        android:entries="@array/sexy"
         android:gravity="center"
+        android:prompt="@string/sexy"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="8pt"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-    </Spinner>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <EditText
@@ -178,12 +187,27 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
+        android:id="@+id/fragment_mine_ageEt"
+        android:layout_width="190dp"
+        android:layout_height="33dp"
+        android:layout_marginTop="472dp"
+        android:layout_marginEnd="48dp"
+        android:background="#6680FFFF"
+        android:focusable="false"
+        android:gravity="center"
+        android:text="@string/birth"
+        android:textColor="@color/black"
+        android:textSize="8pt"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <Button
         android:id="@+id/fragment_mine_changeFriendSizeBtn"
         android:layout_width="160dp"
         android:layout_height="38dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="504dp"
+        android:layout_marginTop="550dp"
         android:background="#9951AAE3"
         android:gravity="center"
         android:text="@string/changeFriendSize"
@@ -197,7 +221,6 @@
         android:id="@+id/fragment_mine_saveChangeBtn"
         android:layout_width="136dp"
         android:layout_height="38dp"
-        android:layout_marginTop="504dp"
         android:layout_marginEnd="40dp"
         android:background="#9951AAE3"
         android:gravity="center"
@@ -205,14 +228,14 @@
         android:textColor="@color/white"
         android:textSize="7pt"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/fragment_mine_changeFriendSizeBtn" />
 
     <Button
         android:id="@+id/fragment_mine_changePwdBtn"
         android:layout_width="95dp"
         android:layout_height="38dp"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="580dp"
+        android:layout_marginTop="620dp"
         android:background="#9951AAE3"
         android:gravity="center"
         android:text="@string/changePassword"
@@ -225,7 +248,6 @@
         android:id="@+id/fragment_mine_LogoutBtn"
         android:layout_width="95dp"
         android:layout_height="38dp"
-        android:layout_marginTop="580dp"
         android:background="#7270B603"
         android:gravity="center"
         android:text="@string/logout"
@@ -233,13 +255,12 @@
         android:textSize="7pt"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/fragment_mine_changePwdBtn" />
 
     <Button
         android:id="@+id/fragment_mine_DestroyUserBtn"
         android:layout_width="95dp"
         android:layout_height="38dp"
-        android:layout_marginTop="580dp"
         android:layout_marginEnd="40dp"
         android:background="#ADD03956"
         android:gravity="center"
@@ -247,6 +268,6 @@
         android:textColor="@color/white"
         android:textSize="7pt"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/fragment_mine_changePwdBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
